force-app/main/default/objects/Int_Facility_Feature__c/Int_Facility_Feature__c.object-meta.xml
<CustomObject>
    <description>Int Facility Feature</description>
    <label>Int Facility Feature</label>
    <nameField>
        <displayFormat>FFI-{0000000000}</displayFormat>
        <label>Facility Feature Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Facility Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>