force-app/main/default/objects/Int_Facility_Feature__c/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Facility Name</description>
    <label>Facility Name</label>
    <referenceTo>Int_Facility__c</referenceTo>
    <relationshipLabel>Int Facility Features</relationshipLabel>
    <relationshipName>Int_Facility_Features</relationshipName>
    <type>Lookup</type>
</CustomField>