force-app/main/default/objects/Int_Facility_Feature__c/fields/Value_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Value_DateTime__c</fullName>
    <description>Value DateTime</description>
    <label>Value DateTime</label>
    <type>DateTime</type>
</CustomField>