force-app/main/default/objects/Int_Facility_Feature__c/fields/Value_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Value_Numeric__c</fullName>
    <description>Value Numeric</description>
    <label>Value Numeric</label>
    <length>38</length>
    <type>Text</type>
</CustomField>